public/stylesheets/sass/login.sass
@import lib

=input
  display: block
  background: url('/images/signin_input.png') no-repeat 0 0
  width: 243px - 2*20px
  height: 53px
  padding: 0 20px
  border: 0 none
  font:
    size: 12px
    style: italic
  background-position: 0 0
  color: transparentize(#12b2e6, 1 - 0.25)

  &#user_email
    margin-top: -8px
  &#user_password
    margin-top: 0

  &.placeholder
    background-position: 0
    color: transparentize(#d2d2d2, 0.5)
    text-shadow: 0px 1px 0px #000
  &::-webkit-input-placeholder
    background-position: 0
    color: transparentize(#d2d2d2, 0.5)
    text-shadow: 0px 1px 0px #000
  &:-moz-placeholder
    color: transparentize(#d2d2d2, 0.5)
    text-shadow: 0px 1px 0px #000
  &.hover, &:hover
    background-position: 0 -1*53px
    color: #12b2e6
  &.active, &:focus
    background-position: 0 -2*53px
    color: #333
  &.error
    background-position: 0 -3*53px
    color: #333

.user-signin
  background-color: #0b141e
  color: #6283a3
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.898)
  height: 100%

  .main-wrap
    background: url('/css/images/login-background-gradient.png') repeat-x

  .main-wrap, .bottom-wrap
    width: 100%

  .bottom-wrap
    margin-top: -3px
    background: url('/css/images/login-background-bottom-gradient.png') repeat-x #0b141e

    .ruler
      width: 100%
      height: 6px
      background: url(/css/images/login-ruler.png) repeat-x 0 0

  p.submit
    margin-top: 10px

    input
      background-color: #516c88
      border: none
      color: #fff
      padding: 5px 10px
      +round-borders(7px)

  .main
    background: url('/css/images/login-background-top.png') no-repeat center top
    position: relative
    width: 100%
    height: 350px
    padding: 100px 0 0 18px
    position: relative
    .logo-wrap
      width: 620px
      margin: auto
      height: 77px

      #logo
        margin: -34px 0 0 -112px
    .or
      font-size: 14px
      color: #b8d9ff
      float: left
      width: 20px
      margin: 38px 18px 0 20px
      text-transform: uppercase
    .code
      float: left
      width: 200px
    .wrap
      position: relative
      z-index: 1
      margin: -45px auto
      width: 620px
      top: 0
      right: 0
      bottom: 227px
      left: 0
      padding: 50px 0 0 28px

      h2
        // color: #678ab0
        margin: 0 0 20px 13px

    .buttons
      a
        margin-top: 10px
        display: block
        width: 115px
        height: 36px
        line-height: 36px
        background-color: #516c88
        +round-borders(7px)
        border: solid 1px #4B6482
        text-shadow: 0px 1px 0px #0F1B27
        box-shadow: 0px 1px 2px #0f1b27
        border-top: solid 1px #5B7999
        font-size: 12px
        text-align: center
        color: #a9d1f2
        text-decoration: none
        &:hover, &:focus
          color: #fff
        &:active
          background-color: #516c88
          color: #fff
          box-shadow: 0px -1px 2px #0f1b27
          border-bottom: solid 1px #5B7999
          border-top: solid 1px #516c88
        &.new-user
          float: left
          margin-left: 70px
        &.registered-user
          float: right
          margin-right: 70px
    #forgot_password
      display: none
    input.input
      +input
    #forgot_password
      float: right
      margin: 0 20px 0 0
      font-size: 10px
      color: lighten (#4a6580, 10%)
      text-shadow: transparentize(#000, 1 - 0.75) 0 1px 1px

    #user_remember_me, #age, p.submit input
      margin-left: 15px

    label[for = "user_remember_me"], label[for = "age"]
      font-size: 10px
      line-height: 1.6
      vertical-align: top

    label[for = "age"].error
      color: #a94d4d

  .bottom
    background: url('/css/images/login-background-bottom.png') no-repeat center top
    width: 100%
    height: 346px
    .wrap
      overflow: hidden
      margin: 0 auto
      padding: 18px 30px 30px 30px
      width: 800px
    .description
      float: left
      margin: 0 65px 0 14px
      width: 360px
      color: #bee0ff
      text-shadow: transparentize(#091421, 0.25) 0 2px 1px, transparentize(#a0b6cd, 0.5) 0 0 15px
      p
        font-size: 14px
        line-height: 20px
      h2
        text-shadow: transparentize(#091421, 0.25) 0 2px 1px, transparentize(#a0b6cd, 0.5) 0 0 15px
        margin: 0 0 0.3em 0
        font-size: 30px
        font-weight: normal
        line-height: 1.2
    .signup
      float: left
      width: 330px

      form
        margin-top: 15px

      input.input
        +input
        margin-left: -9px

      h2
        float: left

      .code-test
        p.lucky
          font-size: 12px

        p.request-via-email a
          font-size: 10px
          height: 18px
          display: inline-block

      #has-code
        float: right
        font-size: 10px
        background: url(/css/images/signup-code.png) no-repeat
        padding: 0 0 0 15px
        line-height: 1.8
        display: block
        margin-top: 7px
        // color: #516c8a

      p
        margin-top: 10px

        &.do-share
          font-size: 10px
          color: #c3c9cc
        &.title
          margin: 0 0 0.5em 0
          font-size: 20px
          line-height: 1.2
          font-weight: bold
          text-shadow: transparentize(#000, 0.1) 0 2px 0px
        &.text
          font-size: 10px
          line-height: 14px
          text-shadow: transparentize(#000, 0.2) 0 1px 0px

        &.bigger
          font-size: 14px

        &.request-via-email
          margin-top: 15px

        a
          background: url(/css/images/request-invite.png) no-repeat
          padding-left: 25px

        input.referral-url
          color: #26374d
          font: 12px Georgia,serif
          font-style: italic
          background: url(/css/images/referral-url.png) no-repeat 0 5px
          border: none
          height: 32px
          padding: 3px 5px
          width: 150px
          margin-left: -3px

        a
          &.share-fb, &.share-tw
            color: #fff
            font-size: 12px
            display: inline-block
            height: 30px
            width: 53px
            line-height: 29px

          &.share-fb
            background: url(/css/images/facebook-share.png) no-repeat 0

          &.share-tw
            line-height: 29px
            padding-left: 30px
            background: url(/css/images/twitter-share.png) no-repeat


      a
        color: #6283a3

  .invite-sent
    color: #C3C9CC
    text-shadow: rgba(9, 20, 33, 0.75) 0 2px 1px, rgba(160, 182, 205, 0.5) 0 0 15px
  div.register
    margin-top: -53px

  .signin, div.register
    float: left
    width: 280px
  .or
    float: right
    width: 24px
    text-shadow: rgba(9, 20, 33, 0.75) 0 2px 1px, rgba(160, 182, 205, 0.5) 0 0 15px
  .omniauth-links
    float: left
    width: 246px
    .tw
      display: block
    p
      width: 231px
      height: 53px
      float: right
      a
        display: block
        padding: 7px 0 0 35px
        width: 206px
        height: 55px
        line-height: 24px
        color: #fff
        font-size: 11px
        font-weight: bold
        text-shadow: transparentize(#000, 0.2) 0 1px 2px
        &:hover
          text-decoration: none
      &.fb a
        background: url('/css/images/facebook-button.png') no-repeat 0 0
      &.tw a
        background: url('/css/images/twitter-button.png') no-repeat 0 0

  .confirm-new
    .title
      font-size: 23px
      color: #c3c9cc
      text-shadow: transparentize(#091421, 0.25) 0 2px 1px, transparentize(#a0b6cd, 0.5) 0 0 15px
      span.indent
        display: block
        text-indent: 2em
    .small
      font-size: 12px
      color: #12b2e6
      text-shadow: transparentize(#000, 1 - 0.75) 0 1px 1px
      text-indent: 3em
    .large
      margin: 25px 0
      font-size: 16px
      text-align: center
      color: #fff

  h2
    font-size: 20px
    font-weight: bold
    line-height: 1.2
    margin: 0 0 0.5em
    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.898)

.pulsars-wrap
  position: absolute
  width: 100%
  height: 350px
  bottom: 1px
.pulsars
  width: 1070px
  position: relative
  margin: 0 auto
  height: 282px
  bottom: -70px
  .p
    position: absolute
    width: 100%
    height: 100%
    opacity: 0
  .p1
    background: url('/css/images/p1.png') no-repeat transparent
  .p2
    background: url('/css/images/p2.png') no-repeat transparent
  .p3
    background: url('/css/images/p3.png') no-repeat transparent
  .p4
    background: url('/css/images/p4.png') no-repeat transparent

